--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -6,10 +6,9 @@
   @include container;
   @include clearfix;
   margin-top: 0;
+  padding-top: 0;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  animation: fadeInUp 0.6s cubic-bezier(0.4, 0, 0.2, 1) both;
-  animation-delay: 0.1s;
 
   @include breakpoint($x-large) {
     max-width: $x-large;
